style.css
body {
    display: flex;
    flex-direction: column;
    font-family:'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
}

.top {
    display: flex;
    flex-direction: column;
    background-color: #1F2937;
    color: white;
    padding-left: 100px;
    padding-right: 100px;
}

.header {
    display: flex;
    justify-content: space-between;
    align-items: center;
    padding-bottom: 40px;
}

.header-text {
    font-size: 24px;
    color:#F9FAF8;
    font-weight:1000;
}

.header li {
    font-size:18px;
    color:#E5E7EB;
}

.top .top-body {
    display: flex;
    gap: 28px;
    padding-bottom: 78px;
}

.top .top-left {
    width: 50%;
}

.top .top-body .top-left button {
    background-color: #3882F6;
    color:white;
    font-weight: bold;
    padding: 5px;
    padding-left: 12px;
    padding-right: 12px;
    border-radius: 6px;

}

.top .top-right {
    width: 50%;
    display: flex;
    justify-content: center;
    align-items: center;
    background-color: #8a8c91;
    
}

.top .top-left .title-text {
    font-size: 48px;
    font-weight: 1000;
    color:#F9FAF8;
}

.top-middle {
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    padding-top: 32px;
    padding-left: 120px;
    padding-right: 120px;
    padding-bottom: 48px;
}

.top-middle .top-text {
    font-size: 36px;
    font-weight: 1000;
    color:#1F2937;
    margin-bottom: 28px;
}

.top-middle .content-blocks {
    display: flex;
}

.top-middle .content-blocks .block {
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
}

.top-middle .content-blocks .image {
    height:100px;
    width: 100px;
    border:3px solid #3882F6;
}

.top-middle .content-blocks p {
    text-align: center;
}

.bottom-middle {
    background-color: #E5E7EB;
    padding-top: 78px;
    padding-left: 172px;
    padding-right: 172px;
    padding-bottom: 78px;
    display: flex;
    flex-direction: column;
}

.bottom-middle .quote {
    font-size: 36px;
    color:#1F2937;
    font-style: italic;
}

.bottom-middle .author {
    align-self: end;
    font-weight: bold;
}


.bottom {
    display: flex;
    align-items: center;
    justify-content: center;
    padding-top: 64px;
    padding-bottom: 64px;
    padding-left: 100px;
    padding-right: 100px;
}

.bottom .body {
    background-color: #3882F6;
    padding-left: 60px;
    padding-right: 60px;
    padding-top: 15px;
    padding-bottom: 15px;
    display: flex;
    border-radius: 5px;
    justify-content: space-between;
    align-items: center;
    gap: 75px;
}

.bottom .body .left-side {
    display: flex;
    flex-direction: column;
    color:#E5E7EB;
}

.bottom button {
    border-color: white;
    background-color: transparent;
    color:#E5E7EB;
    padding-left:15px;
    padding-right: 15px;
    padding-top:3px;
    padding-bottom: 3px;
    font-weight: bold;
    white-space: nowrap;
    border-radius: 3px;
}

.footer {
    display: flex;
    justify-content: center;
    align-items: center;
    background-color: #1F2937;
    color: #E5E7EB;
    font-size: 18px;
    padding-top: 40px;
    padding-bottom: 40px;
}

.secondary-text {
    font-size: 18px;
    color:#E5E7EB;
}

ul {
    list-style: none;
    display: flex;
    gap: 15px;
}

